# modern_project

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
docs/: project_management_tools_testing.md  python.md
src/command/: command.py
src/micah_python_project_generic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/test/: command_test.py
