[metadata]
name = default_project
description = default
author = Micah Norman
license = MIT
platforms = linux, unix, osx, cygwin, win32

[options]
packages = command
install_requires = httpx
python_requires = >=3.11
package_dir = =src
zip_safe = no

[options.extras_require]
testing = 
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
command = py.typed